kubernetes/test/whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    run: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      run: whoami
  template:
    metadata:
      labels:
        run: whoami
    spec:
      serviceAccountName: whoami
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 256m
              memory: 128Mi
            requests:
              cpu: 64m
              memory: 64Mi
