kubernetes/test/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    run: whoami
spec:
  type: ClusterIP
  selector:
    run: whoami
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
